--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <i class="fas fa-address-book"></i>
         </div>
         <div class="inputWithIcons">
-            <input id="add1" type="text" placeholder="Address Line 1">
+            <input id="add2" type="text" placeholder="Address Line 2">
             <i class="fas fa-address-book"></i>
         </div>
         <div class="inputWithIcons">
@@ -47,7 +47,7 @@
             <i class="far fa-envelope"></i>
         </div>
         <div class="inputWithIcons">
-        <select name="cars" id="country">
+        <select id="country">
             <option value="volvo">India</option>
             <option value="saab">Australia</option>
             <option value="mercedes">England</option>
